--- a/recipe-page-main/css/style.css
+++ b/recipe-page-main/css/style.css
@@ -1,118 +1,218 @@
-*,
-*::before,
-*::after {
+@import "/css/normalize.css";
+*, *::before, *::after {
   box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
   padding: 0;
 }
 
 body {
+  font-size: 16px;
+}
+
+body {
   font-family: "Outfit", sans-serif;
-  background-color: #FFFFFF;
   color: #312E2C;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 150%;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-}
-
-ul, ol {
-  list-style-position: inside;
-  padding-left: 16px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.recipe__image {
-  border-radius: 16px;
-  margin-bottom: 24px;
-}
-.recipe__title {
-  font-family: "Outfit", sans-serif;
-  font-weight: 600;
-  font-size: 20px;
+h1 {
+  font-family: "Young Serif", serif;
+  font-size: 40px;
   line-height: 100%;
-  letter-spacing: 0;
-  margin-bottom: 16px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  color: #312E2C;
 }
-.recipe__description {
+
+h2 {
   font-family: "Outfit", sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 100%;
+  letter-spacing: 0px;
+  color: #854A32;
+}
+
+p {
+  line-height: 150%;
+  letter-spacing: 0px;
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0;
-  margin-bottom: 32px;
+  color: #312E2C;
 }
-.recipe ul li, .recipe ol li {
-  font-family: "Outfit", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0;
-  margin-bottom: 12px;
-}
-.recipe ul li strong, .recipe ol li strong {
-  font-family: "Outfit", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0;
+
+strong {
   font-weight: 700;
-}
-.recipe table caption {
-  font-family: "Outfit", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0;
-  text-align: left;
-  margin-bottom: 16px;
-}
-.recipe table th, .recipe table td {
-  padding: 12px;
-  text-align: center;
-}
-.recipe table th {
-  font-family: "Outfit", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0;
-  font-weight: 700;
-}
-.recipe table td {
-  font-family: "Outfit", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0;
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 800px;
   margin: 0 auto;
-  padding: 32px;
-}
-@media (min-width: 375px) {
-  .container {
-    padding: 16px;
-  }
+  padding: 0 20px;
 }
 
-.recipe__header, .recipe__prep-time, .recipe__ingredients, .recipe__instructions, .recipe__nutrition {
-  margin-bottom: 32px;
+.recipe__header {
+  margin-bottom: 128px;
 }
-.recipe__header h2 {
-  font-family: "Outfit", sans-serif;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 100%;
-  letter-spacing: 0;
-  margin-bottom: 16px;
+@media (min-width: 768px) {
+  .recipe__header {
+    margin-bottom: 48px;
+  }
+}
+@media (min-width: 320px) {
+  .recipe__header {
+    margin-bottom: 24px;
+  }
+}
+.recipe__image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 48px;
+}
+@media (min-width: 768px) {
+  .recipe__image {
+    margin-bottom: 24px;
+  }
+}
+@media (min-width: 320px) {
+  .recipe__image {
+    margin-bottom: 12px;
+  }
+}
+.recipe__title {
+  margin-bottom: 24px;
+}
+@media (min-width: 320px) {
+  .recipe__title {
+    margin-bottom: 12px;
+  }
+}
+.recipe__description {
+  margin-bottom: 48px;
+}
+@media (min-width: 768px) {
+  .recipe__description {
+    margin-bottom: 24px;
+  }
+}
+@media (min-width: 320px) {
+  .recipe__description {
+    margin-bottom: 12px;
+  }
+}
+.recipe__prep-time {
+  background-color: #FFF7FB;
+  padding: 20px;
+  margin-bottom: 128px;
+}
+@media (min-width: 768px) {
+  .recipe__prep-time {
+    margin-bottom: 48px;
+  }
+}
+@media (min-width: 320px) {
+  .recipe__prep-time {
+    margin-bottom: 24px;
+  }
+}
+.recipe__prep-time h2 {
+  margin-bottom: 24px;
+}
+@media (min-width: 320px) {
+  .recipe__prep-time h2 {
+    margin-bottom: 12px;
+  }
+}
+.recipe__prep-time ul {
+  list-style: disc;
+  margin-left: 40px;
+  padding-left: 0;
+  margin-bottom: 24px;
+}
+@media (min-width: 320px) {
+  .recipe__prep-time ul {
+    margin-bottom: 12px;
+  }
+}
+.recipe__prep-time li {
+  margin-bottom: 12px;
+  font-size: 16px;
+}
+@media (min-width: 320px) {
+  .recipe__prep-time li {
+    margin-bottom: 8px;
+  }
+}
+.recipe__ingredients, .recipe__instructions, .recipe__nutrition {
+  margin-bottom: 128px;
+}
+.recipe__ingredients h2, .recipe__instructions h2, .recipe__nutrition h2 {
+  margin-bottom: 24px;
+}
+@media (min-width: 320px) {
+  .recipe__ingredients h2, .recipe__instructions h2, .recipe__nutrition h2 {
+    margin-bottom: 12px;
+  }
+}
+@media (min-width: 768px) {
+  .recipe__ingredients, .recipe__instructions, .recipe__nutrition {
+    margin-bottom: 48px;
+  }
+}
+@media (min-width: 320px) {
+  .recipe__ingredients, .recipe__instructions, .recipe__nutrition {
+    margin-bottom: 24px;
+  }
+}
+.recipe__ingredients ul, .recipe__instructions ol {
+  list-style: disc;
+  margin-left: 40px;
+  padding-left: 0;
+  margin-bottom: 24px;
+}
+@media (min-width: 320px) {
+  .recipe__ingredients ul, .recipe__instructions ol {
+    margin-bottom: 12px;
+  }
+}
+.recipe__ingredients ul li, .recipe__instructions ol li {
+  margin-bottom: 12px;
+  font-size: 16px;
+}
+@media (min-width: 320px) {
+  .recipe__ingredients ul li, .recipe__instructions ol li {
+    margin-bottom: 8px;
+  }
+}
+.recipe__instructions ol {
+  list-style: decimal;
+}
+.recipe__nutrition table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.recipe__nutrition table caption {
+  margin-bottom: 24px;
+  text-align: left;
+  font-size: 16px;
+}
+@media (min-width: 320px) {
+  .recipe__nutrition table caption {
+    margin-bottom: 12px;
+  }
+}
+.recipe__nutrition th, .recipe__nutrition td {
+  text-align: left;
+  padding: 12px;
+  border-bottom: 1px solid #E3DDD7;
+  font-size: 16px;
+}
+.recipe__nutrition th {
+  color: #5F564D;
+  font-size: 16px;
 }/*# sourceMappingURL=style.css.map */
