--- a/recipe-page-main/scss/_components.scss
+++ b/recipe-page-main/scss/_components.scss
@@ -1,49 +1,138 @@
-// _components.scss
 .recipe {
-  &__image {
-    border-radius: map-get($spacing, '200');
-    margin-bottom: map-get($spacing, '300');
-  }
-
-  &__title {
-    @include text-preset-3;
-    margin-bottom: map-get($spacing, '200');
-  }
-
-  &__description {
-    @include text-preset-4;
-    margin-bottom: map-get($spacing, '400');
-  }
-
-  ul, ol {
-    li {
-      @include text-preset-4;
-      margin-bottom: map-get($spacing, '150');
-
-      strong {
-        @include text-preset-4-bold;
+    &__header {
+      @include spacing(1600);
+  
+      @include breakpoint(medium) {
+          @include spacing(600);
+      }
+       @include breakpoint(small) {
+          @include spacing(300);
       }
     }
-  }
-
-  table {
-    caption {
-      @include text-preset-4;
-      text-align: left;
-      margin-bottom: map-get($spacing, '200');
+  
+    &__image {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      @include spacing(600);
+      @include breakpoint(medium) {
+          @include spacing(300);
+      }
+      @include breakpoint(small) {
+          @include spacing(150);
+      }
     }
-
-    th, td {
-      padding: map-get($spacing, '150');
-      text-align: center;
+  
+    &__title {
+      @include spacing(300);
+      @include breakpoint(small) {
+          @include spacing(150);
+      }
     }
-
-    th {
-      @include text-preset-4-bold;
+    &__description {
+        @include spacing(600);
+        @include breakpoint(medium) {
+            @include spacing(300);
+        }
+        @include breakpoint(small) {
+            @include spacing(150);
+        }
     }
-
-    td {
-      @include text-preset-4;
+    &__prep-time {
+      background-color: $color-rose-50;
+      padding: 20px;
+      @include spacing(1600);
+      @include breakpoint(medium) {
+          @include spacing(600);
+      }
+       @include breakpoint(small) {
+          @include spacing(300);
+      }
+      h2 {
+        @include spacing(300);
+        @include breakpoint(small) {
+            @include spacing(150);
+        }
+      }
+      ul {
+        list-style: disc;
+        margin-left: 40px;
+        padding-left: 0;
+        @include spacing(300);
+         @include breakpoint(small) {
+            @include spacing(150);
+        }
+      }
+      li {
+          @include spacing(150);
+          @include breakpoint(small) {
+            @include spacing(100);
+          }
+          font-size: $font-size-body;
+      }
     }
-  }
+  
+    &__ingredients,
+    &__instructions,
+    &__nutrition {
+        @include spacing(1600);
+        h2 {
+            @include spacing(300);
+            @include breakpoint(small) {
+                @include spacing(150);
+            }
+          }
+        @include breakpoint(medium) {
+            @include spacing(600);
+        }
+        @include breakpoint(small) {
+            @include spacing(300);
+        }
+    }
+    &__ingredients ul,
+    &__instructions ol {
+      list-style: disc;
+      margin-left: 40px;
+      padding-left: 0;
+      @include spacing(300);
+       @include breakpoint(small) {
+          @include spacing(150);
+      }
+      li {
+        @include spacing(150);
+        @include breakpoint(small) {
+          @include spacing(100);
+        }
+        font-size: $font-size-body;
+    }
+    }
+  
+    &__instructions ol {
+      list-style: decimal;
+    }
+    &__nutrition table {
+        width: 100%;
+        border-collapse: collapse;
+        caption {
+            @include spacing(300);
+            text-align: left;
+            font-size: $font-size-body;
+             @include breakpoint(small) {
+              @include spacing(150);
+            }
+        }
+    }
+  
+    &__nutrition th,
+    &__nutrition td {
+        text-align: left;
+        padding: 12px;
+        border-bottom: 1px solid $color-stone-150;
+        font-size: $font-size-table-td;
+    }
+  
+    &__nutrition th {
+        color: $color-stone-600;
+        font-size: $font-size-table-th;
+    }
 }
