--- a/recipe-page-main/scss/_variables.scss
+++ b/recipe-page-main/scss/_variables.scss
@@ -36,3 +36,8 @@ $spacing-map: (
   150: 12px,
   100: 8px
 );
+
+// Breakpoints
+$breakpoint-mobile: 375px;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1440px;
