--- a/recipe-page-main/scss/_layout.scss
+++ b/recipe-page-main/scss/_layout.scss
@@ -1,5 +1,41 @@
+// scss/_layout.scss
+
 .container {
-    max-width: 800px;
+    max-width: 1440px; // Set maximum width for desktop
     margin: 0 auto;
-    padding: 0 20px;
+    padding: var(--spacing-300); // Default padding for mobile
+  
+    @include breakpoint(tablet) {
+      padding: var(--spacing-1600) var(--spacing-600); // Padding for tablet
+    }
+  
+    @include breakpoint(desktop) {
+      padding: var(--spacing-1600) var(--spacing-600); // Padding for desktop
+    }
+  }
+  
+  body {
+    display: flex;
+    flex-direction: column;
+    width: 375px;
+    align-items: flex-start;
+    background: var(--color-white, #FFF);
+     @include breakpoint(tablet) {
+        display: flex;
+        width: 768px;
+        padding: var(--spacing-1600, 128px) var(--spacing-600, 48px);
+        justify-content: center;
+        align-items: center;
+        gap: var(--spacing-100, 8px);
+        background: var(--color-stone-100, #F3E5D7);
+     }
+     @include breakpoint(desktop) {
+        align-items: center;        
+        display: flex;
+        width: 1440px;
+        padding: var(--spacing-1600, 128px) var(--spacing-600, 48px);
+        justify-content: center;        
+        gap: var(--spacing-100, 8px);
+        background: var(--color-stone-100, #F3E5D7);
+     }
   }
